estilos de botones

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
     <!--fontawesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
-    <title>contactanos</title>
+    <title>dashboard</title>
 </head>
 
 <!--Comienzo del body-->
@@ -46,6 +46,8 @@
                 </li>
             </ul>
             <button id="login" type="button">Login</button>
+            <a href="login.html" target="_blank">login</a>
+
         </nav>
     </header>
 
