--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -56,15 +56,12 @@
             </figure>
             <article>
                 <h4>¿QUIENES SOMOS?</h4>
-                <p class="somos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque unde assumenda nostrum, excepturi
-                    adipisci impedit temporibus dolorum vel minima rerum doloribus cupiditate deleniti neque expedita
-                    veritatis libero saepe delectus porro.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque unde assumenda nostrum, excepturi
-                    adipisci impedit temporibus dolorum vel minima rerum doloribus cupiditate deleniti neque expedita
-                    veritatis libero saepe delectus porro.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque unde assumenda nostrum, excepturi
-                    adipisci impedit temporibus dolorum vel minima rerum doloribus cupiditate deleniti neque expedita
-                    veritatis libero saepe delectus porro.
+                <p class="somos">
+
+                    En <b> Medilink</b>,creemos en la importancia de la atención médica personalizada y en brindar herramientas que permitan a las personas tomar el control de su bienestar. Nuestra misión es facilitar el acceso a la información médica, simplificar la gestión de la salud y fomentar una relación colaborativa entre pacientes y profesionales de la salud.
+                                      Desde <b>seguimientos de citas médicas hasta recordatorios de medicamentos y monitoreo de síntomas</b>, Medilink está diseñado para ser tu aliado de confianza en cada paso de tu viaje de salud. Estamos comprometidos con la excelencia, la seguridad y la privacidad de los datos, garantizando que cada experiencia con Medilink sea segura y efectiva.</b>
+                  
+              
                 </p>
             </article>
 
@@ -73,37 +70,36 @@
     </main>
 </body>
 
-<footer>
+<footer>    
     <p class="copyright">@ medilink 2023</p>
     <ul>
         <li>
-            <a href="#">
+            <a href="https://www.facebook.com/" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/facebook-transparencia-footer.png"
                     alt="facebook-footer">
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="https://www.instagram.com/" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/instagram-transparencia-footer.png"
                     alt="instagram-footer">
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="https://www.facebook.com/messenger/?locale=es_LA" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/messenger-transparencia-footer.png"
                     alt="messenger-footer">
         </li>
         <li>
-            <a href="#">
+            <a href="https://twitter.com/?lang=es" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/twitter-transparencia-footer.png"
                     alt="twitter-footer">
         </li>
         <li>
-            <a href="#">
+            <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/whatsapp-transparencia-footer.png"
                     alt="whatsapp-footer">
         </li>
     </ul>
-
 
 </footer>
