--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <title>medilink</title>
 </head>
 
-<!--Comienzo del body-->
+<!---------------------COMIENZO DEL BODY--------------------->
 <body>
 
-    <!--Comienzo del header-->
+    <!-------COMIENZO DE HEADER-------->
     <header>
-        <!--barra navegación-->
+        <!--------barra navegación-------->
         <nav>
             <a href="/index.html"><img class="logo" src="/assets/img/imagenes index prestadores salud/logo-medilink.png"
                     alt="logo-medilink"></a>
             <ul class="pages">
                 <li>
-                    <a href="index.html" target="_blank">Inicio </a>
+                    <a href="#" target="_blank">Inicio </a>
                 </li>
                 <li>
                     <a href="quienes_somos.html" target="_blank">Quienes somos </a>
@@ -41,15 +41,17 @@
                 <li>
                     <a href="noticias.html" target="_blank">Noticias</a>
                 </li>
-                <li>
-                    <a href="Inicio.html" target="_blank">Contactanos</a>
-                </li>
+               
             </ul>
-            <!--boton login-->
+            <!-------boton login-------->
             <button id="login" type="button">
                 <a href="login.html" target="_blank">login</a>
                 </button>
+                <!------- FIN boton login-------->
         </nav>
+
+
+        
     </header>
 
     <!--comienzo main-->
@@ -220,10 +222,12 @@
             </div>
         </div>
     </section>
-
+<!--sección de enfocate en tus paciente-->
     <section class="call-to-action">
-        <h5 class="pacientes">Enfocate en tus pacientes</h5>       
-        <div class="submit2"> <a class="boton2" href="#">Contactanos</a></div>
+        <!--texto enfocate en tus pacientes-->
+        <h5 class="pacientes">Enfocate en tus pacientes</h5>
+
+        <div class="submit2"> <a class="boton2" href="/login.html">Registrate</a></div>
     </section>
 
     <!--inicio faq-->
