--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-------COMIENZO DE HEADER-------->
     <header>
-        <!--------barra navegación-------->
+        <!--------BARRA NAVEGACIÓN-------->
         <nav>
             <a href="/index.html"><img class="logo" src="/assets/img/imagenes index prestadores salud/logo-medilink.png"
                     alt="logo-medilink"></a>
@@ -33,25 +33,24 @@
                     <a href="#" target="_blank">Inicio </a>
                 </li>
                 <li>
-                    <a href="quienes_somos.html" target="_blank">Quienes somos </a>
+                    <a href="/quienes_somos.html" target="_blank">Quienes somos </a>
                 </li>
                 <li>
-                    <a href="servicios.html" target="_blank">Servicios </a>
+                    <a href="/servicios.html" target="_blank">Servicios </a>
                 </li>
                 <li>
-                    <a href="noticias.html" target="_blank">Noticias</a>
+                    <a href="/noticias.html" target="_blank">Noticias</a>
                 </li>
                
             </ul>
             <!-------boton login-------->
             <button id="login" type="button">
-                <a href="login.html" target="_blank">login</a>
+                <a href="login.html" target="_blank">Login</a>
                 </button>
                 <!------- FIN boton login-------->
         </nav>
+        <!----FIN DE BARRA DE NAVEGACIÓN-->
 
-
-        
     </header>
 
     <!--comienzo main-->
@@ -66,7 +65,7 @@
                 <!--descripcion de la web-->
                 <p>Sistema de reserva de citas médicas. </p>
 
-                <!--lista desordenada con ítems para bullets-->
+                <!--------lista desordenada con ítems para bullets--------->
                 <ul class="bullets">
                     <li><i class="fas fa-solid fa-check"></i> Citas automatizadas </li>
                     <li><i class="fas fa-solid fa-check"></i> Informes online </li>
@@ -74,22 +73,22 @@
                     <li><i class="fas fa-solid fa-check"></i> Herramientas automatizadas</li>
                     <li><i class="fas fa-solid fa-check"></i> Control sobre el historial médico de tus pacientes </li>
                 </ul>
-                <!-- fin lista desordenada con ítems para bullets-->
+                <!-------- fin lista desordenada con ítems para bullets--------->
             </article>
 
             <article>
-                <!--imagen principal médico con laptop-->
+                <!---------imagen principal médico con laptop------->
                 <figure>
                     <img class="medico"
                         src="/assets/img/imagenes index prestadores salud/doctor imagen principal-01.png"
                         alt="foto-portada-medilink">
 
                 </figure>
-                <!--fin imagen principal médico con laptop-->
+                <!-------fin imagen principal médico con laptop-------->
             </article>
 
             <article>
-                <!--formulario de contacto-->
+                <!-------formulario de contacto-------------->
                 <form class="contact-form">
                     <h3 class="contacto">Si estás interesado en nuestros servicios escribinos y te contactaremos a la
                         brevedad.</h3>
@@ -105,17 +104,16 @@
                     </fieldset>
                 </form>
 
-                <!--fin de formulario de contacto-->
+                <!-------fin de formulario de contacto-------->
             </article>
         </section>
     </main>
-    <!--find de seccion principal-->
+    <!-------fin de seccion principal--------->
 
     <!--sección-->
     <section class="analizando">
-
         <ul>
-            <li class="icons"><!--esto en un futuro lleva botones y ventanas modales para expliccar los 3 pasos-->
+            <li class="icons"><!--esto en un futuro lleva botones y ventanas modales para explicar los 3 pasos-->
                 <figure>
                     <img class="#" src="/assets/img/imagenes index prestadores salud/imagenes-01.png">
                     <h4>ANALIZÁ LAS NECESIDADES DE TU PRÁCTICA MÉDICA</h4>
@@ -145,10 +143,7 @@
                     suscipit officiis temporibus voluptas quis explicabo exercitationem. Repudiandae impedit officia
                     adipisci animi quis omnis esse voluptatum eaque possimus quaerat!</p>
             </li>
-
         </ul>
-
-
     </section>
 
     <section class="comentarios">
@@ -227,7 +222,7 @@
         <!--texto enfocate en tus pacientes-->
         <h5 class="pacientes">Enfocate en tus pacientes</h5>
 
-        <div class="submit2"> <a class="boton2" href="/login.html">Registrate</a></div>
+        <div class="registro"> <a class="boton2" href="/registro.html">Registrate</a></div>
     </section>
 
     <!--inicio faq-->
