primera prueba dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,257 +18,209 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <title>dashboard</title>
 </head>
-
 <!--Comienzo del body-->
 <body>
-
     <!--Comienzo del header-->
     <header>
         <!--barra navegación-->
         <nav>
-            <a><img class="logo" src="/assets/img/imagenes index prestadores salud/logo-medilink.png"
+            <a href="/index.html"><img class="logo" src="/assets/img/imagenes index prestadores salud/logo-medilink.png"
                     alt="logo-medilink"></a>
             <ul class="pages">
                 <li>
-                    <a href="index.html" target="_blank">Inicio </a>
+                    <a href="/index.html" target="_blank">Inicio </a>
                 </li>
                 <li>
-                    <a href="quienes_somos.html" target="_blank">Quienes somos </a>
+                    <a href="/quienes_somos.html" target="_blank">Quienes somos </a>
                 </li>
                 <li>
-                    <a href="servicios.html" target="_blank">Servicios </a>
+                    <a href="/servicios.html" target="_blank">Servicios </a>
                 </li>
                 <li>
-                    <a href="noticias.html" target="_blank">Noticias</a>
-                </li>
-                <li>
-                    <a href="Inicio.html" target="_blank">Contactanos</a>
+                    <a href="/noticias.html" target="_blank">Noticias</a>
                 </li>
             </ul>
             <button id="login" type="button">Login</button>
-            <a href="login.html" target="_blank">login</a>
+            <a href="login.html" target="_blank"></a>
 
         </nav>
     </header>
+    <!--------comienzo main----------->
+    <main class="main-dashboard">
+        <section>
+            <div class="principial-dashboard">
+                <div class="bienvenida"><b class="texto-bienvenida">¡¡Bienvenido </b> Dr. Juan Perez!!</div>
+                <input type="search" placeholder="Buscar paciente" id="buscador">
 
-    <!--comienzo main-->
-    <main>
+                <aside class="aside-dashboard">
+                    <div class="ficha-medíco">
+                        <figure>
+                            <img class="medico-dash" src="/assets/img/imagenes dashboard/foto-señor-cardiologo.png"
+                                alt="foto-portada-medilink">
+                        </figure>
+                        <p class="nombre">Juan Perez</p>
+                        <p class="especialidad">Cardiologo</p>
+                    </div>
+                    <div class="menu-vertical">
+                        <ul>
+                            <li><a href="#"></a><i class="fas fa-regular fa-calendar-check"></i> Calendario</li>
+                            <li><a href="#"></a><i class="fas fa-regular fa-envelope"></i> Inbox</li>
+                            <li><a href="#"><i class="fas fa-regular fa-calendar-check"></i></a>Órdenes</li>
+                            <li><a href="#"><i class="fas fa-regular fa-calendar-check"></i></a> Escribir Post</li>
+                            <li><a href="#"></a><i class="fa fa-sharp fa-regular fa-circle-user"></i> Información Médica
+                            </li>
+                            <li><a href="#"><i class="fas fa-regular fa-calendar-check"></i></a>Comentarios</li>
+                            <li><a href="#"></a><i class="fas fa-regular fa-gear"></i> Configuraciones</li>
+                        </ul>
+                    </div>
+                </aside>
 
-        <!-- inicio section banner-->
-        <section class="banner">
-            <article class="tagline">
-                <h1>ENFOCATE EN TUS PACIENTES.</h1><!--tagline-->
-                <h2>NOSOTROS NOS ENCARGAMOS DEL RESTO.</h2>
-                <!--descripcion de la web-->
-                <p>Sistema de reserva de citas médicas. </p>
-                <!--lista desordenada con ítems para bullets-->
-                <ul class="bullets">
-                    <li><i class="fas fa-solid fa-check"></i> Citas automatizadas </li>
-                    <li><i class="fas fa-solid fa-check"></i> Informes online </li>
-                    <li><i class="fas fa-solid fa-check"></i> Pagos online </li>
-                    <li><i class="fas fa-solid fa-check"></i> Herramientas automatizadas</li>
-                    <li><i class="fas fa-solid fa-check"></i> Control sobre el historial médico de tus pacientes </li>
-                </ul>
-                <!-- fin lista desordenada con ítems para bullets-->
-            </article>
+                <!---comienzo calendario-->
+                <table class="calendario">
+                    <h2 class="mes-calendario">OCTUBRE 2023</h2>
+                    <tr>
 
-            <article>
-                <!--imagen principal médico con laptop-->
-                <figure>
-                    <img class="medico"
-                        src="/assets/img/imagenes index prestadores salud/doctor imagen principal-01.png"
-                        alt="foto-portada-medilink">
+                        <th> HORARIO:</th>
+                        <th> LUNES </th>
+                        <th> MARTES </th>
+                        <th> MIERCOLES</th>
+                        <th> JUEVES </th>
+                        <th> VIERNES</th>
+                    </tr>
+                    <tr>
+                        <td>08</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
 
-                </figure>
-                <!--fin imagen principal médico con laptop-->
-            </article>
+                    </tr>
+                    <tr>
+                        <td>09</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
 
-            <article>
-                <!--formulario de contacto-->
-                <form class="contact-form">
-                    <h3 class="contacto">Si estás interesado en nuestros servicios escribinos y te contactaremos a la
-                        brevedad.</h3>
-                    <fieldset>
-                        <label for="nombre"></label>
-                        <input type="text" placeholder="Ingresa tu nombre" id="nombre" name="nombre" required>
-                        <label for="email"></label>
-                        <input type="email" placeholder="Ingresá tu email" id="email" name="email" required>
-                        <label for="mensaje"></label>
-                        <textarea id="mensaje" placeholder="Escribí tu mensaje (max 400 caracteres)" name="mensaje"
-                            rows="4" required></textarea>
-                        <button class="submit" type="submit">Contactanos</button>
-                    </fieldset>
-                </form>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
 
-                <!--fin de formulario de contacto-->
-            </article>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+
+                    </tr>
+                    <tr>
+
+                        <td>12
+                        <td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+
+                    </tr>
+                    </tr>
+                    <td>13</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+
+                    </tr>
+                    </tr>
+                    <td>14</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+
+                    </tr>
+                    </tr>
+                    <td>15</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+
+                    </tr>
+                    </tr>
+                    <td>16</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+
+                    </tr>
+                    </tr>
+                    <td>17</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+
+                    </tr>
+                    </tr>
+                    </p>
+
+
+                </table>
+
+            </div>
+            </div>
         </section>
     </main>
-    <!--find de seccion principal-->
 
-    <!--sección-->
-    <section class="analizando">
-
-        <ul>
-            <li class="icons"><!--esto en un futuro lleva botones y ventanas modales para expliccar los 3 pasos-->
-                <figure>
-                    <img class="#" src="/assets/img/imagenes index prestadores salud/imagenes-01.png">
-                    <h4>ANALIZÁ LAS NECESIDADES DE TU PRÁCTICA MÉDICA</h4>
-                    <p class="necesidades">Lorem ipsum dolor sit amet consectetur adipisicing elit. In aliquid maxime ea
-                        aliquam corporis mollitia tempore tempora doloremque! Alias tenetur corporis, officiis quia sit
-                        similique aut doloremque atque expedita quos!</p>
-                </figure>
-            </li>
-            <li class="icons">
-                <figure>
-                    <img class="#" src="/assets/img/imagenes index prestadores salud/imagenes-02.png">
-                </figure>
-                <h4>IMPLEMENTÁ NUESTROS SERVICIOS</h4>
-                <p class="necesidades">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae
-                    vero doloremque voluptates ipsam nihil corporis repellendus ab, architecto officiis perferendis ea
-                    in sit eum fugit animi fuga neque maxime.</p>
-            </li>
-
-
-            <li class="icons">
-
-                <figure>
-                    <img class="#" src="/assets/img/imagenes index prestadores salud/imagenes-03.png">
-                </figure>
-                <h4>CONTACTANOS Y OPTIMIZÁ TU RENDIMIENTO</h4>
-                <p class="necesidades">Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatem, numquam
-                    suscipit officiis temporibus voluptas quis explicabo exercitationem. Repudiandae impedit officia
-                    adipisci animi quis omnis esse voluptatum eaque possimus quaerat!</p>
-            </li>
-
-        </ul>
-
-
-    </section>
-
-    <section class="comentarios">
-        <div class="container">
-            <div class="row">
-                <div class="card">
-                    <blockquote>
-                        "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo commodi sed beatae cum tenetur
-                        quidem, minus ad ducimus voluptas, nobis tempora aspernatur delectus similique error odio labore
-                        repellendus voluptates accusantium!""
-                    </blockquote>
-                    <div class="container">
-                        <div class="row medico">
-                            <img class="foto-medico"
-                                src="/assets/img/imagenes index prestadores salud/foto-señor-cardiologo.png">
-                            <div class="card datos-medico">
-                                <h3>Juan Perez</h3>
-                                <h6>Cardiólogo</h6>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <blockquote>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo commodi sed beatae cum tenetur
-                        quidem, minus ad ducimus voluptas, nobis tempora aspernatur delectus similique error odio labore
-                        repellendus voluptates accusantium!
-                    </blockquote>
-                    <div class="container">
-                        <div class="row medico">
-                            <img class="foto-medico"
-                                src="/assets/img/imagenes index prestadores salud/foto-hombre-medico.png">
-                            <div class="card datos-medico">
-                                <h3>José Rodriguez</h3>
-                                <h6>Médico General</h6>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <blockquote>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo commodi sed beatae cum tenetur
-                        quidem, minus ad ducimus voluptas, nobis tempora aspernatur delectus similique error odio labore
-                        repellendus voluptates accusantium!
-                    </blockquote>
-                    <div class="container">
-                        <div class="row medico">
-                            <img class="foto-medico"
-                                src="/assets/img/imagenes index prestadores salud/foto-mujer-pediatra.png">
-                            <div class="card datos-medico">
-                                <h3>Maria Dominguez</h3>
-                                <h6>Pediatra</h6>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                                <i class="fas fa-solid fa-star" style="color: #ffa400;"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="call-to-action">
-        <h5 class="pacientes">Enfocate en tus pacientes</h5>       
-        <a href="#"><div class="submit2">Contactanos</div></a>
-    </section>
-
-
-    <section class="faq">
-        <div class="titulo-faq">Preguntas Frecuentes</div>
-        <ul>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? </li>
-        </ul>
-    </section>
-
+</body>
 <!--Final del body-->
 <!--Principio del footer-->
 <footer>
-    
+
     <p class="copyright">@ medilink 2023</p>
     <ul>
         <li>
-            <a href="#">
+            <a href="https://www.facebook.com/ " target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/facebook-transparencia-footer.png"
                     alt="facebook-footer">
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="https://www.instagram.com/" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/instagram-transparencia-footer.png"
                     alt="instagram-footer">
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="https://www.facebook.com/messenger/?locale=es_LA" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/messenger-transparencia-footer.png"
                     alt="messenger-footer">
         </li>
         <li>
-            <a href="#">
+            <a href="https://twitter.com/?lang=es" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/twitter-transparencia-footer.png"
                     alt="twitter-footer">
         </li>
         <li>
-            <a href="#">
+            <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/whatsapp-transparencia-footer.png"
                     alt="whatsapp-footer">
         </li>
@@ -277,4 +229,5 @@
 </footer>
 <!--Final del footer-->
 </body>
+
 </html>
