--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
     <!--fontawesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
-    <title>medilink</title>
+    <title>index</title>
 </head>
 
 <!---------------------COMIENZO DEL BODY--------------------->
@@ -198,7 +198,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo commodi sed beatae cum tenetur
                         quidem, minus ad ducimus voluptas, nobis tempora aspernatur delectus similique error odio labore
                         repellendus voluptates accusantium!
-                    </blockquote>
+                    </blockquote>                    
                     <div class="container">
                         <div class="row medico">
                             <img class="foto-medico"
