--- a/login.html
+++ b/login.html
@@ -72,8 +72,9 @@
 <footer>    
     <p class="copyright">@ medilink 2023</p>
     <ul>
+        
         <li>
-            <a href="https://www.facebook.com/" target="_blank">
+            <a href=https://www.facebook.com/Myrna.Mynkoff target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/facebook-transparencia-footer.png"
                     alt="facebook-footer">
             </a>
@@ -85,7 +86,7 @@
             </a>
         </li>
         <li>
-            <a href="https://www.facebook.com/messenger/?locale=es_LA" target="_blank">
+            <a href="https://www.facebook.com/" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/messenger-transparencia-footer.png"
                     alt="messenger-footer">
         </li>
