Sección noticias final

--- a/gracias.html
+++ b/gracias.html
@@ -42,59 +42,60 @@
                     <a href="/noticias.html" target="_blank">Noticias</a>
                 </li>
                 <li>
-                    
-            </ul>           
-             <!-------BOTON LOGIN-------->
-             <button id="login" type="button">
+
+            </ul>
+            <!-------BOTON LOGIN-------->
+            <button id="login" type="button">
                 <a href="login.html" target="_blank">Login</a>
-                </button>
-                <!------- FIN BOTON LOGIN-------->
+            </button>
+            <!------- FIN BOTON LOGIN-------->
         </nav>
         <!------- FIN BOTON LOGIN-------->
     </header>
     <!--------Comienzo del main-------->
     <main class="pagina-agradecimiento">
-       
-    <figure class="cont-shaking"><img  class="shaking-hands" src="/assets/img/agradecimiento/shaking_hands-01.png"></figure>
-      <!----------Contenedor texto de agradecimiento------->   
-    <div class="agradecimiento">
-        <h2 class="gracias">¡Gracias!</h2>
-    <p class="texto-agradecimiento"> Nos comunicaremos a la brevedad</p> 
-  </div>
-    </main>
-<!-------Comienzo footer-------->
-<footer>    
-    <p class="copyright">@ medilink 2023</p>
-    <ul>
-        <li>
-            <a href="https://www.facebook.com/" target="_blank">
-                <img src="/assets/img/imagenes index prestadores salud/facebook-transparencia-footer.png"
-                    alt="facebook-footer">
-            </a>
-        </li>
-        <li>
-            <a href="https://www.instagram.com/" target="_blank">
-                <img src="/assets/img/imagenes index prestadores salud/instagram-transparencia-footer.png"
-                    alt="instagram-footer">
-            </a>
-        </li>
-        <li>
-            <a href="https://www.facebook.com/messenger/?locale=es_LA" target="_blank">
-                <img src="/assets/img/imagenes index prestadores salud/messenger-transparencia-footer.png"
-                    alt="messenger-footer">
-        </li>
-        <li>
-            <a href="https://twitter.com/?lang=es" target="_blank">
-                <img src="/assets/img/imagenes index prestadores salud/twitter-transparencia-footer.png"
-                    alt="twitter-footer">
-        </li>
-        <li>
-            <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
-                <img src="/assets/img/imagenes index prestadores salud/whatsapp-transparencia-footer.png"
-                    alt="whatsapp-footer">
-        </li>
-    </ul>
 
-</footer>
-<!--Fin footer-->
+        <figure class="cont-shaking"><img class="shaking-hands" src="/assets/img/agradecimiento/shaking_hands-01.png">
+        </figure>
+        <!----------Contenedor texto de agradecimiento------->
+        <div class="agradecimiento">
+            <h2 class="gracias">¡Gracias!</h2>
+            <p class="texto-agradecimiento"> Nos comunicaremos a la brevedad</p>
+        </div>
+    </main>
+    <!-------Comienzo footer-------->
+    <footer>
+        <p class="copyright">@ medilink 2023</p>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="/assets/img/imagenes index prestadores salud/facebook-transparencia-footer.png"
+                        alt="facebook-footer">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="/assets/img/imagenes index prestadores salud/instagram-transparencia-footer.png"
+                        alt="instagram-footer">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/messenger/?locale=es_LA" target="_blank">
+                    <img src="/assets/img/imagenes index prestadores salud/messenger-transparencia-footer.png"
+                        alt="messenger-footer">
+            </li>
+            <li>
+                <a href="https://twitter.com/?lang=es" target="_blank">
+                    <img src="/assets/img/imagenes index prestadores salud/twitter-transparencia-footer.png"
+                        alt="twitter-footer">
+            </li>
+            <li>
+                <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
+                    <img src="/assets/img/imagenes index prestadores salud/whatsapp-transparencia-footer.png"
+                        alt="whatsapp-footer">
+            </li>
+        </ul>
+
+    </footer>
+    <!--Fin footer-->
 </body>
