--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <p class="copyright">@ medilink 2023</p>
     <ul>
         <li>
-            <a href="https:// www.facebook.com/ " target="_blank">
+            <a href=https://www.facebook.com/Myrna.Mynkoff target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/facebook-transparencia-footer.png"
                     alt="facebook-footer">
             </a>
