Proyecto_terminado_prueba01

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -56,13 +56,18 @@
                 <img src="assets/img/imagenes quienes somos/Quienes-somos-01.png" alt="quienes somos foto">
             </figure>
             <article>
-                <h4 >¿QUIENES SOMOS?</h4>
+                <h4>¿QUIENES SOMOS?</h4>
                 <p class="somos">
+                    En <b> Medilink</b>,creemos en la importancia de la atención médica personalizada y en brindar
+                    herramientas que permitan a las personas tomar el control de su bienestar. Nuestra misión es
+                    facilitar el acceso a la información médica, simplificar la gestión de la salud y fomentar una
+                    relación colaborativa entre pacientes y profesionales de la salud.
+                    Desde <b>seguimientos de citas médicas hasta recordatorios de medicamentos y monitoreo de
+                        síntomas</b>, Medilink está diseñado para ser tu aliado de confianza en cada paso de tu viaje de
+                    salud. Estamos comprometidos con la excelencia, la seguridad y la privacidad de los datos,
+                    garantizando que cada experiencia con Medilink sea segura y efectiva.</b>
 
-                    En <b> Medilink</b>,creemos en la importancia de la atención médica personalizada y en brindar herramientas que permitan a las personas tomar el control de su bienestar. Nuestra misión es facilitar el acceso a la información médica, simplificar la gestión de la salud y fomentar una relación colaborativa entre pacientes y profesionales de la salud.
-                                      Desde <b>seguimientos de citas médicas hasta recordatorios de medicamentos y monitoreo de síntomas</b>, Medilink está diseñado para ser tu aliado de confianza en cada paso de tu viaje de salud. Estamos comprometidos con la excelencia, la seguridad y la privacidad de los datos, garantizando que cada experiencia con Medilink sea segura y efectiva.</b>
-                  
-              
+
                 </p>
             </article>
 
@@ -71,7 +76,7 @@
     </main>
 </body>
 
-<footer>    
+<footer>
     <p class="copyright">@ medilink 2023</p>
     <ul>
         <li>
