Maquetado estático final

--- a/login.html
+++ b/login.html
@@ -143,10 +143,10 @@
                                             name="password" required>
                                         <label for="password"></label>
 
-                                        <p class=" mt-1 fs-5 text-white">¿Olvidaste tu contraseña?
+                                        <p class=" mt-1 fs-5 text-warning">¿Olvidaste tu contraseña?
                                             <a class="click" href="#" class="link-warning">Hacé click acá</a>
                                         </p>
-                                        <p class="pb-3 fs-5 text-white">Todavía no estás registrado?<a class="click"
+                                        <p class="pb-3 fs-5 text-warning">Todavía no estás registrado?<a class="click"
                                                 href="/registro.html"
                                                 class="text-white link-warning">Registrate</a> </p>
                                         <button class="submit mb-5 rounded-3" type="submit">Ingresá</button>
